--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thom's Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="images" href="img">
+    <link rel="images" href="/img">
 
 </head>
 <script src='javascript/js.js'></script>
