--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main></main>
 
 
-    <button id="nav-toggle" type="button" onclick="togglenav()">
+    <button id="nav-toggle" type="button" onclick="toggleNav()">
         <i class="open fa-light fa-bars-staggered"></i>
         <i class="close fa-light fa-xmark-large"></i>
     </button>
