--- a/index.html
+++ b/index.html
@@ -5,19 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thom's Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="images" href="./img">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="images" href="img">
 
 </head>
-<script src='./javascript/js.js'></script>
+<script src='javascript/js.js'></script>
 
 <body data-nav="false">
-    <main></main>
+    <main>
+        <content>
+        <header>
+            <H1>Welkom bij de portfolio van Thom Groenenberg</H1>
+        </header>
 
+        <section id="over-mij">
+            <H2>Over mij</H2>
+            <p>
+                Ik ben Thom Groenenberg, 1ste jaar student bij CMGT op de hogeschool Rotterdam. 
+                Ik ben 19 jaar en woon in Giessen met mijn twee broers, zus, ouders en mijn hond, Snowy. <br>
+                 <br>
+                Hier zijn een paar van mijn interesses:
+                <ul>
+                  <li>Games/Bordspellen</li>
+                  <li>Piano/drum spelen</li>
+                  <li>Thee</li>
+                  <li>Dieren</li>
+                </ul>
+              </p>
+        </section>
+
+        </content>
+    </main>
+
+    <nav>
+        <a href=./index.html>Over mij</a>
+        <a href=./skills.html>Skills</a>
+        <a href=./projects.html>Projecten</a>
+        <a href=./contact.html>Socials</a>
+    </nav>
 
     <button id="nav-toggle" type="button" onclick="toggleNav()">
-        <i class="open fa-light fa-bars-staggered"></i>
-        <i class="close fa-light fa-xmark-large"></i>
+        <i class="open fa-light fa-bars-staggered"><img src="img/menu-button.png" id="menu-button"></i>
+        <i class="close fa-light fa-xmark-large"><img src="img/close-button.png" id="close-button"></i>
     </button>
 
 </body>
