--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thom's Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="images" href="./img">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="images" href="img">
 
 </head>
-<script src='./javascript/js.js'></script>
+<script src='javascript/js.js'></script>
 
 <body data-nav="false">
     <main>
@@ -20,12 +20,20 @@
         <section id="projects">
             <H2>Projecten</H2>
             <p>
-                Op deze plek hoop ik later projecten toe te kunnen voegen.
-                <br>
-                <br>
-                CLE 1 bij Hogeschool Rotterdam: Samen met mijn team(peerteam 18) zijn wij bezig gegaan met het bouwen van een robot. Meer informatie vindt je <a href="https://mossymoth.github.io/mijnBMO/">hier</a> op de website van ons project.
+                Deze pagina is nog incompleet. Over de verloop van de tijd zullen hier nog veranderingen en updates worden toegevoegd.
             </p>
         </section>
+
+        <div class="gallery">
+            <div id="CLE1">
+                <a href="https://mossymoth.github.io/mijnBMO/"><img src="img/BMO-CLE1.png"></a>
+                CLE 1: Samen met mijn team(peerteam 18) zijn wij bezig gegaan met het bouwen van een robot die bedoeld was om een uitgekozen probleem bij studenten op te lossen. Meer informatie over dit traject vindt je op de website van ons project.
+            </div>
+            <div id="CLE2">
+                <a><img src="img/RestaurantForm-CLE2.png"></a>
+                CLE 2: Tijdens deze sprint werk ik zelfstanding aan een reserveringssysteem voor Restaurant de Stroming. Hiervoor ben ik bezig om aan de al bestaande site een php pagina toe te voegen waar je kan reserveren. Omdat dit project nog in werking is, is er (momenteel) geen goed deelbaar voorbeeld.
+            </div>
+        </div>
     </main>
 
     <nav>
