--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             </div>
             <div id="CLE2">
                 <a><img src="img/RestaurantForm-CLE2.png"></a>
-                CLE 2: Tijdens deze sprint werk ik zelfstanding aan een reserveringssysteem voor Restaurant de Stroming. Hiervoor ben ik bezig om aan de al bestaande site een php pagina toe te voegen waar je kan reserveren. Omdat dit project nog in werking is, is er (momenteel) geen goed deelbaar voorbeeld.
+                CLE 2: Tijdens deze sprint werk ik zelfstanding aan een reserveringssysteem voor Restaurant de Stroming. Hiervoor ben ik bezig om aan de al bestaande site een php pagina toe te voegen waar je kan reserveren. Zodra de website mijn update live zet, zal de link worden toegevoegd.
             </div>
         </div>
     </main>
