--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <section id="over-mij">
             <H2>Over mij</H2>
             <p>
-                Ik ben Thom Groenenberg, 1ste jaar student bij CMGT op de hogeschool Rotterdam. 
-                Ik ben 19 jaar en woon in Giessen met mijn twee broers, zus, ouders en mijn hond, Snowy. <br>
+                Ik ben Thom Groenenberg, 4e jaar student bij HKU voor Game Design. Hier werk ik aan vaardigheden die voor zowel games ontwikkelen als software maken kunnen worden gebruikt. 
+                Ik ben momenteel 22 jaar en woon in Giessen, Noord-Brabant. <br>
                  <br>
                 Hier zijn een paar van mijn interesses:
                 <ul>
                   <li>Games/Bordspellen</li>
                   <li>Piano/drum spelen</li>
-                  <li>Thee</li>
+                  <li>Thee drinken</li>
                   <li>Dieren</li>
                 </ul>
               </p>
@@ -48,3 +48,4 @@
 
 </body>
 </html>
+
