--- a/skills.html
+++ b/skills.html
@@ -19,13 +19,14 @@
 
         <section id="skills">
             <H2>Skills</H2>
+            <H1>Ik heb met de onderstaande </H1>
             <ul>
-              <li>C# en javascript</li>
-              <li>Ervaring met Unity</li>
-              <li>Beginner's ervaring in html en css</li>
+              <li>HTML, CSS, C# en javascript</li>
+              <li>Ervaring met Unity, en met het maken van webgames</li>
+              <li>Intermediary Niveau in Design theorie</li>
+              <li>Lichte ervaring met muziek maken in MPC beats</li>
               <li>Drummen</li>
-              <li>Beginner's niveau in Design theorie</li>
-              <li>Amateur niveau ervaring met muziek maken in MPC beats</li>
+              <li>Meerdere jaren ervaring met het maken and spelen van DnD Games, waarin teambuilding vooraan staat</li>
             </ul>
         </section>
     </main>
@@ -44,3 +45,4 @@
 
 </body>
 </html>
+
