--- a/projects.html
+++ b/projects.html
@@ -20,18 +20,18 @@
         <section id="projects">
             <H2>Projecten</H2>
             <p>
-                Deze pagina is nog incompleet. Over de verloop van de tijd zullen hier nog veranderingen en updates worden toegevoegd.
+                Deze pagina wordt nog altijd geüpdatet. Over de verloop van de tijd zullen hier veranderingen en updates worden toegevoegd.
             </p>
         </section>
 
         <div class="gallery">
             <div id="CLE1">
                 <a href="https://mossymoth.github.io/mijnBMO/"><img src="img/BMO-CLE1.png"></a>
-                CLE 1: Samen met mijn team(peerteam 18) zijn wij bezig gegaan met het bouwen van een robot die bedoeld was om een uitgekozen probleem bij studenten op te lossen. Meer informatie over dit traject vindt je op de website van ons project.
+                Schooljaar 1 - CLE 1: Samen met mijn team(peerteam 18) zijn wij bezig gegaan met het bouwen van een robot die bedoeld was om een uitgekozen probleem bij studenten op te lossen. Meer informatie over dit traject vindt je op de website van ons project.
             </div>
             <div id="CLE2">
                 <a><img src="img/RestaurantForm-CLE2.png"></a>
-                CLE 2: Tijdens deze sprint werk ik zelfstanding aan een reserveringssysteem voor Restaurant de Stroming. Hiervoor ben ik bezig om aan de al bestaande site een php pagina toe te voegen waar je kan reserveren. Zodra de website mijn update live zet, zal de link worden toegevoegd.
+                Schooljaar 1 - CLE 2: Tijdens deze sprint werk ik zelfstanding aan een reserveringssysteem voor Restaurant de Stroming. Hiervoor ben ik bezig om aan de al bestaande site een php pagina toe te voegen waar je kan reserveren.
             </div>
         </div>
     </main>
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
