--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="formrule">
-                    <label for="category">Extra informatie over contact nemen:</label>
+                    <label for="category">Informatie over contact nemen:</label>
                 </div>
     
                 <div class="formrule">
@@ -94,3 +94,4 @@
 
 </body>
 </html>
+
