--- a/thanks.html
+++ b/thanks.html
@@ -15,7 +15,7 @@
     <main>
         <section>
             <p id="filled-form">
-                Bedankt voor het invullen van de form!
+                Bedankt voor het invullen van het formulier!
             </p>
         </section>
     </main>
@@ -34,3 +34,4 @@
 
 </body>
 </html>
+
